@@ -2,14 +2,13 @@ package ca.on.oicr.gsi.shesmu.server;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import java.util.Collections;
 import java.util.List;
 
 @JsonIgnoreProperties(ignoreUnknown = true)
 public class StaticAction {
   private String name;
   private ObjectNode parameters;
-  private List<String> tags = Collections.emptyList();
+  private List<String> tags = List.of();
 
   public String getName() {
     return name;
